2010-10-01  Ryan Nunn <colourles@users.sourceforge.net>
	* Changed things so it is possible to open some of the options gumps from the
	  Exult menu (requires data from the games to work, but thats ok). Removed 
	  the old setup main menu screen and replaced it with the in game gumps.

2010-09-04  Ryan Nunn <colourles@users.sourceforge.net>
	* menulist.cc : Trying to stop mouse lag
	* mouse.cc : Stopping warping from occuring unless fastmouse is enable 
	  (otherwise mouse can get trapped when windowed)
	* shapes/fontgen.cc : Added a Win32 GDI font renderer. My experience is its
	  better at producing small pixel fonts compared to FreeType (because it 
	  can legally use Font hinting all the time)
	* gamemgr/bggame.cc : Added missing zooms into BG Intro
	* imagewin/imagewin.h : Added a method to get access to draw_surface

2010-08-30  Ryan Nunn <colourles@users.sourceforge.net>
	* imagewin/imagewin.cc : Explicitly set pixel format of the 'inter_surface'.
	  Might fix Dominik's colour issues if the SDL default does not match the 
	  display surfaces

2010-08-15 Dominik Reichardt <dominus@users.sourceforge.net>
	* data/bg/ and data/si: added autonotes.txt for each game. For now these mostly
	  list global flags found and known for the games with some description of the 
	  set flag.
	  The idea is to replace these descriptions with witty text and have them appear
	  in the notebook (press'n'). I've written some stuff for BG already but not 
	  near enough.

2010-08-29  Ryan Nunn <colourles@users.sourceforge.net>
	* Added ability to right click on option buttons in gumps. Right clicking 
	  will select to previous option in the list.
	* Layout of video Options Gump been reworked slightly so it make more 
	  sense. Changed things to Windowed mode lets you choose from a larger list
	  of display sizes that include resolutions that are likely to be wanted.
	* Video Options gump now has an 'APPLY' button instead of 'CANCEL' and 'OK'.